--- a/index.html
+++ b/index.html
@@ -16,24 +16,27 @@
 </head>
 <body>
     <div class="container-fluid d-flex justify-content-center align-items-center cont w-100 h-100 ">
-        <div class="container-fluid box">
+        <div class="box">
                 <div class="mb-3 d-flex justify-content-center">
                 <label for="" class="form-label">Login Form</label>
             </div>
             <div class="mb-3 ">
                 <label for="" class="form-label d-flex justify-content-center align-items-center">
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eveniet aspernatur cupiditate</p>
+                    <p class="fontsize">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eveniet aspernatur cupiditate</p>
                 </label>
             </div>
-            <div class="container-fluid  d-column align-items-center  rounded ">
-            
-                <div class="mb-3">
-                    <label for="exampleFormControlInput1" class="form-label">Email address</label>
+            <div class="mb-3">
+                <label for="" class="form-label">Login to our site</label>
+            </div>
+            <div class="container-fluid  d-column align-items-center h-50 rounded  inputcontainer">
+                <div class="mb-3 ">
                     <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Username">
                   </div>
                   <div class="mb-3">
-                    <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
                     <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Password">
+                  </div>
+                  <div class="mb-3">
+                        <button type="button" class="btn btn-info w-100">Log in</button>
                   </div>
             </div>
         </div>
